<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HoraEspecificaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_especifica"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grisnihel"
        android:visibility="gone">

        <TextView
            android:id="@+id/especifico_hora"
            android:layout_width="289dp"
            android:layout_height="104dp"
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:text="@string/_20_00"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="163dp"
            android:layout_height="107dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView3"
            app:layout_constraintEnd_toStartOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="201dp">

                <TextView
                    android:id="@+id/especifico_temp"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_below="@+id/especifico_temp_titulo"
                    android:gravity="center"
                    android:text="@string/_20_c"
                    android:textSize="25sp"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="234dp" />

                <TextView
                    android:id="@+id/especifico_temp_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/temperatura" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="163dp"
            android:layout_height="107dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toEndOf="@+id/cardView1"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="208dp"
                tools:layout_editor_absoluteY="200dp">

                <TextView
                    android:id="@+id/especifico_sens"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_below="@+id/especifico_sens_titulo"
                    android:gravity="center"
                    android:text="@string/_20_c1"
                    android:textSize="25sp"
                    tools:layout_editor_absoluteX="208dp"
                    tools:layout_editor_absoluteY="231dp" />

                <TextView
                    android:id="@+id/especifico_sens_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/sensacion_t_rmica" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="163dp"
            android:layout_height="107dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/Cardview6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView3"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="348dp">

                <TextView
                    android:id="@+id/especifico_prob_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/precipitaciones"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="348dp" />

                <TextView
                    android:id="@+id/especifico_prob"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_below="@+id/especifico_prob_titulo"
                    android:layout_marginTop="-1dp"
                    android:gravity="center"
                    android:text="@string/_20_c2"
                    android:textSize="25sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="163dp"
            android:layout_height="107dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView5"
            app:layout_constraintEnd_toStartOf="@+id/cardView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="346dp">

                <TextView
                    android:id="@+id/especifico_hum"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_below="@+id/especifico_hum_titulo"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/_20_c3"
                    android:textSize="25sp"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="377dp" />

                <TextView
                    android:id="@+id/especifico_hum_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/humedad" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="163dp"
            android:layout_height="107dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Cardview6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.866">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="541dp">

                <TextView
                    android:id="@+id/especifico_viento"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_below="@+id/especifico_viento_titulo"
                    android:gravity="center"
                    android:text="@string/_20_c4"
                    android:textSize="25sp"
                    tools:layout_editor_absoluteX="30dp"
                    tools:layout_editor_absoluteY="572dp" />

                <TextView
                    android:id="@+id/especifico_viento_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/viento" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Cardview6"
            android:layout_width="163dp"
            android:layout_height="107dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/cardView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.868">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="214dp"
                tools:layout_editor_absoluteY="540dp">

                <TextView
                    android:id="@+id/especifico_presion_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/presi_n"
                    tools:layout_editor_absoluteX="214dp"
                    tools:layout_editor_absoluteY="540dp" />

                <TextView
                    android:id="@+id/especifico_presion"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:layout_below="@+id/especifico_presion_titulo"
                    android:gravity="center"
                    android:text="@string/_20_c5"
                    android:textSize="25sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="268dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/detalles_en_la_hora"

            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/especifico_hora"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/especifico_loc"
            android:layout_width="248dp"
            android:layout_height="26dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/madrid"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/especifico_hora" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarEspecifico"
        android:visibility="visible"
        android:layout_centerInParent="true"
        />
</RelativeLayout>